syntax="proto3";

//protoc --go_out=plugins=grpc:. ./business.proto

package common;

message     AccountInfo{
    string user_name = 1;
    string password = 2;
    string identity = 3;
    string phone = 4;
}

enum   ERROR_CODE{
    NONE = 0;
    INTERNAL_ERROR = 1;
    USERNAME_INVALID = 2;
    PASSWORD_INVALID  = 3;              //注册时设置的密码无效
    IDENTITY_INVALID  = 4;               //注册时身份证号无效
    PHONE_INVALID = 5;
    USERNAME_NO_EXIST = 6;
    PASSWORD_ERROR = 7;                 //登录时密码错误  
    USERNAME_EXIST = 8;                 //注册时已经存在
    SHOP_NAME_INVALID = 9;
    SHOP_DESC_OVER_LEN = 10;
    ACCOUNT_ID_NO_EXIST = 11;
    IMAGE_EXIST = 12;
    SHOP_ID_NO_EXIST = 13;
}

message     ErrorCode{
    ERROR_CODE  err_code = 1;
}

service     AccountManage{
    rpc CreateAccount(AccountInfo) returns (ErrorCode) {}
}

message Account {
    string user_name = 1;
    string password = 2;
}

service AccountLogin{
    rpc Login(Account) returns (ErrorCode) {}
}

message Shop{
    string name = 1;
    string desc = 2;
    int64 account_id = 3;
}

message Logo{
    int64 owner_id = 1;
    int64 img_id = 2;
}

message ShopImages {
    int64 shop_id = 1;
    repeated string img_paths = 2;
}

message Goods {
    int64 shop_id = 1;
    string name = 2;
    string desc = 3;
    int32 quantity = 4;
}

message Goodses {
    repeated Goods goodses = 1;
}

service ShopManage{
    rpc Build(Shop) returns (ErrorCode) {}
    rpc SetLogo(Logo) returns (ErrorCode) {}
    rpc AddImage(ShopImages) returns (ErrorCode) {}
    rpc AddGoods(Goodses) returns (ErrorCode) {}
}